[metadata]
name = adventofcode
version = 0.1
author = Barry Ptak
author_email = 43549850+barryptak@users.noreply.github.com
description = Python solutions for Advent of Code
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/barryptak/AdventOfCode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .